# belousov-zhabotinsky-vulkano

./: Cargo.toml
.nix/: flake.nix
src/: compute.rs  graphics.rs  main.rs  shader.comp  shader.frag  shader.vert
